[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/levelSelection/FloatingIsland.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/levelSelection/LevelSelection.gd" type="Script" id=2]
[ext_resource path="res://font/Font.tres" type="DynamicFont" id=3]

[node name="LevelSelection" type="Node2D"]
script = ExtResource( 2 )

[node name="Island1" parent="." instance=ExtResource( 1 )]
position = Vector2( 196.191, 459.294 )
scale = Vector2( 0.224903, 0.224903 )

[node name="Island2" parent="." instance=ExtResource( 1 )]
position = Vector2( 352.304, 272.74 )
scale = Vector2( 0.357465, 0.357465 )

[node name="Island3" parent="." instance=ExtResource( 1 )]
position = Vector2( 562.398, 419.892 )
scale = Vector2( 0.483796, 0.483796 )

[node name="Island4" parent="." instance=ExtResource( 1 )]
position = Vector2( 826.769, 232.432 )
scale = Vector2( 0.583559, 0.583559 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elegi nivel" type="Label" parent="Control"]
margin_left = 392.951
margin_top = 16.3721
margin_right = 649.951
margin_bottom = 96.3721
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "elegi nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a" type="Label" parent="Control"]
margin_left = 151.705
margin_top = 451.071
margin_right = 235.705
margin_bottom = 531.071
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "A"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="b" type="Label" parent="Control"]
margin_left = 311.239
margin_top = 280.425
margin_right = 395.239
margin_bottom = 360.425
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "B"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c" type="Label" parent="Control"]
margin_left = 514.426
margin_top = 413.767
margin_right = 598.426
margin_bottom = 493.767
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "C"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d" type="Label" parent="Control"]
margin_left = 791.428
margin_top = 221.692
margin_right = 875.428
margin_bottom = 301.692
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "D"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
